--- a/index.html
+++ b/index.html
@@ -64,26 +64,27 @@
                         <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
                     </h1>
                     <p>
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
-                        <br />
-                        <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
-                        <br />
-                        <a href="http://www.osu.edu/" target="_blank">
-                            The Ohio State University - 2016
+                        <a href="http://www.berkeley.edu/" target="_blank">
+                            University of California, Berkeley
                         </a>
                         <br>
                         <span style="font-size: 15pt">
-                            <a href="http://www.cse.osu.edu/" target="_blank">
-                                Computer Science & Engineering
+                            <a href="https://eecs.berkeley.edu/academics/graduate/industry-programs/meng" target="_blank">
+                                Master of Engineering
                             </a>
-                            with minors in
-                            <a href="http://www.stat.osu.edu/" target="_blank">
-                                Statistics
-                            </a>&
-                            <a href="http://www.fisher.osu.edu/" target="_blank">
-                                Business
+                            in
+                            <a href="https://eecs.berkeley.edu/academics/graduate/industry-programs/meng" target="_blank">
+                                Computer Science
                             </a>
                         </span>
+                        <br /><br />
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Former Software Developer</a>
+                        <br />
+                        <a style="cursor:pointer" onclick="$('#link_app').click()">Former iOS App Developer</a>
+                        <br />
+                        <a href="http://www.osu.edu/" target="_blank">
+                            The Ohio State University
+                        </a>
                     </p>
                 </header>
                 <a href="#work" class="jumplink pic">
@@ -96,14 +97,14 @@
                 <header>
                     <h2>Online Computer Library Center (OCLC)</h2>
                     <h3 style="text-transform:uppercase">Software Developer</h3>
-                    <p>July 2016 - present, Columbus, OH</p>
+                    <p>July 2016 - 2018, Columbus, OH</p>
                 </header>
                 Improved and innovated on several Java projects used internally and externally for purposes ranging from data retrieval,
                 transformation, and organization to security
-                <br />Supported a multi-million dollar international contract by writing utilities that enabled our team to internationalize
-                a webapp in 20+ languages
-                <br />Optimized database handling and functionality for compliance with privacy requirements while updating legacy
-                projects to modern technologies such as Spring and SQL
+                <br />Supported a multi-million dollar international contract by writing utilities that enabled our team
+                to internationalize a webapp in 20+ languages
+                <br />Optimized database handling and functionality for compliance with privacy requirements while updating
+                legacy projects to modern technologies such as Spring and SQL
                 <br />Achieved our corporate strategy goals by enhancing OAuth authentication services used by OCLC’s enterprise
                 business partners to offer better support of mobile application authentication
                 <br />Worked with the Operations team to deploy our webapps successfully in the Production environment
@@ -115,7 +116,8 @@
                 </header>
                 Improved the webapp that I worked on in 2014 based on feedback from the Operations team
                 <br />Created new features to significantly simplify and automate tasks for other team members
-                <br />Used C# to internalize SQL scripts into an ASP.NET application while working together using Visual Studio
+                <br />Used C# to internalize SQL scripts into an ASP.NET application while working together using Visual
+                Studio
 
                 <header>
                     <h2>Qualcomm Life</h2>
@@ -124,8 +126,8 @@
                 </header>
                 Overhauled an internal web-app that is used to manage a consumer-facing website
                 <br /> Resolved and implemented requested user stories to increase operational productivity
-                <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members using
-                Team Foundation Server in Visual Studio
+                <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members
+                using Team Foundation Server in Visual Studio
 
                 <header>
                     <h2>The Ohio State University</h2>
@@ -150,15 +152,15 @@
 
             <!-- App -->
             <article id="app" class="panel">
-                <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8">
+                <a target="_blank" href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8">
                     <header>
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
                     </header>
-                    <p>Drinks Tracker allows you to search a list of nearly 4,000 drinks and easily add drinks to track your Blood Alcohol Content (BAC) percentage.</p>
-                    <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
-                    <br /><br />
-                    <h3>Installed by 3,800+ users with 101,000+ impressions</h3>
+                    <p>Drinks Tracker allows you to search a list of nearly 4,000 drinks and easily add drinks to track your
+                        Blood Alcohol Content (BAC) percentage.</p>
+                    <h3>Installed by 3.9k users with 104k impressions</h3>
+                    <h5 style="color:grey">Not currently available</h5>
                     <br /><br />
                     <img class="image web" style="max-width:200px" src="images/screenshot1.png" alt="Drinks Tracker">
                     <img class="image web" style="max-width:200px" src="images/screenshot2.png" alt="Drinks Tracker">
@@ -175,7 +177,8 @@
                     <h4>Features</h4>
                     <ul>
                         <li>Search and easily add drinks. Favorite your frequent drinks for easy access!</li>
-                        <li>Track your BAC using the Today View widget and the Apple Watch app. Complications and Dynamic Notifications are coming soon!</li>
+                        <li>Track your BAC using the Today View widget and the Apple Watch app. Complications and Dynamic
+                            Notifications are coming soon!</li>
                         <li>Easily add custom drinks and favorite them in a few taps.</li>
                         <li>Get notifications when your BAC is at 0.08% and 0% and a reminder to add your next drink.</li>
                         <li>Customize your profile to get an estimated BAC tailored to you!</li>
@@ -187,16 +190,12 @@
 
             <!-- Projects -->
             <article id="projects" class="panel">
-                <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" target="_blank">
-                    <header>
-                        <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
-                        <h2>Drinks Tracker</h2>
-                        <h4>iOS App</h4>
-                        <br />
-                        <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
-                        <p>Spring 2017</p>
-                    </header>
-                </a>
+                <header>
+                    <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
+                    <h2>Drinks Tracker</h2>
+                    <h4>iOS App</h4>
+                    <p>2017</p>
+                </header>
                 <header>
                     <h2>Machine Learning by Stanford University - Coursera</h2>
                     <h4>Taught by Andrew Ng, Co-founder, Coursera and Adjunct Professor, Stanford University</h4>
@@ -256,11 +255,7 @@
                     <header>
                         <h2>Contact Me</h2>
                     </header>
-                    <p>I’m looking forward to studying Data Science at a graduate school next Fall. I recently created an iOS
-                        app called
-                        <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" target="_blank">Drinks Tracker</a>.</p>
-
-                    <p>Currently, I work at OCLC as a Software Developer in the Global Technologies division.</p>
+                    <p>I am interested in jobs after I graduate from University of California, Berkeley in May 2019.</p>
                 </a>
             </article>
 
