--- a/index.html
+++ b/index.html
@@ -191,10 +191,15 @@
             <!-- Projects -->
             <article id="projects" class="panel">
                 <header>
+                    <h2>Working in a team with Prof. Alexandre Bayen on a Capstone Project</h2>
+                    <h4>Learning Reinforcement Learning with applications in Autonomous Traffic</h4>
+                    <p>August 2018 - present</p>
+                </header>
+                <header>
                     <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                     <h2>Drinks Tracker</h2>
                     <h4>iOS App</h4>
-                    <p>2017</p>
+                    <p>May 2017 - 2018</p>
                 </header>
                 <header>
                     <h2>Machine Learning by Stanford University - Coursera</h2>
