--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <article id="projects" class="panel">
                 <header>
                     <h2>Working in a team with Prof. Alexandre Bayen on a Capstone Project</h2>
-                    <h4>Learning Reinforcement Learning with applications in Autonomous Traffic</h4>
+                    <h4>Applying Deep Multi-Agent Reinforcement Learning on Autonomous Traffic</h4>
                     <p>August 2018 - present</p>
                 </header>
                 <header>
