Changed image links

--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
                     <h3>Installed by 3.9k users with 104k impressions</h3>
                     <h5 style="color:grey">Not currently available</h5>
                     <br /><br />
-                    <img class="image web" style="max-width:200px" src="images/screenshot1.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot2.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot3.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot4.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot5.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot6.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot7.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot8.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshot9.png" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/screenshotW.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot1.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot2.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot3.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot4.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot5.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot6.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot7.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot8.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot9.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshotW.jpg" alt="Drinks Tracker">
                     <br />
                     <br />
                     <h4>Features</h4>
