Updated program details

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </a>
                             in
                             <a href="https://eecs.berkeley.edu/academics/graduate/industry-programs/meng" target="_blank">
-                                Computer Science
+                                Data Science
                             </a>
                         </span>
                         <br /><br />
