update to contact tab

--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
 
             <!-- Contact -->
             <article id="contact" class="panel">
-                <a href="mailto:sharaf.5@osu.edu">
+                <a href="mailto:umang@berkeley.edu">
                     <header>
                         <h2>Contact Me</h2>
                     </header>
-                    <p>I am interested in jobs after I graduate from University of California, Berkeley in May 2019.</p>
+                    <p>I am interested in internships for Summer 2019 before I graduate from University of California, Berkeley in December 2019.</p>
                 </a>
             </article>
 
