--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <a style="cursor:pointer" onclick="$('#link_app').click()">Former iOS App Developer</a>
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">
-                            The Ohio State University
+                            The Ohio State University'16
                         </a>
                     </p>
                 </header>
