changes to content and font

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <a href="#me" class="fas fa-home active">
                 <span>Home</span>
             </a>
-            <a href="#about" class="fas fa-home">
-                <span>About me</span>
+            <a href="#about" class="fas fa-user">
+                <span>About</span>
             </a>
-            <a href="#projects" class="far fa-file-code">
+            <a href="#projects" class="fas fa-file-code">
                 <span>Projects</span>
             </a>
             <a href="#work" id="link_work" class="fas fa-briefcase">
@@ -47,14 +47,14 @@
             <a href="#app" id="link_app" class="fas fa-mobile">
                 <span>iOS App</span>
             </a>
-            <a href="#contact" class="far fa-envelope">
-                <span>Contact</span>
-            </a>
-            <a href="https://drive.google.com/file/d/1i9tXIggRqBl4XAasoZo4lZQ2_I_CB3F6/view?usp=sharing" target="_blank" class="far fa-file-alt">
+            <a href="https://drive.google.com/file/d/1i9tXIggRqBl4XAasoZo4lZQ2_I_CB3F6/view?usp=sharing" target="_blank" class="fas fa-file-alt">
                 <span>Resume</span>
             </a>
             <a href="https://www.linkedin.com/in/umangs94" target="_blank" class="fab fa-linkedin">
                 <span>LinkedIn</span>
+            </a>
+            <a href="#contact" class="fas fa-envelope">
+                    <span>Contact</span>
             </a>
         </nav>
 
@@ -96,61 +96,13 @@
 
             <!-- About me -->
             <article id="about" class="panel">
-                    <header>
-                        <h2>Online Computer Library Center (OCLC)</h2>
-                        <h3 style="text-transform:uppercase">Software Developer</h3>
-                        <p>July 2016 - 2018, Columbus, OH</p>
-                    </header>
-                    Improved and innovated on several Java projects used internally and externally for purposes ranging from data retrieval,
-                    transformation, and organization to security
-                    <br />Supported a multi-million dollar international contract by writing utilities that enabled our team
-                    to internationalize a webapp in 20+ languages
-                    <br />Optimized database handling and functionality for compliance with privacy requirements while updating
-                    legacy projects to modern technologies such as Spring and SQL
-                    <br />Achieved our corporate strategy goals by enhancing OAuth authentication services used by OCLC’s enterprise
-                    business partners to offer better support of mobile application authentication
-                    <br />Worked with the Operations team to deploy our webapps successfully in the Production environment
-
-                    <header>
-                        <h2>Qualcomm Life</h2>
-                        <h3 style="text-transform:uppercase">Interim Engineering Intern</h3>
-                        <p>May - July 2015, San Diego, CA</p>
-                    </header>
-                    Improved the webapp that I worked on in 2014 based on feedback from the Operations team
-                    <br />Created new features to significantly simplify and automate tasks for other team members
-                    <br />Used C# to internalize SQL scripts into an ASP.NET application while working together using Visual
-                    Studio
-
-                    <header>
-                        <h2>Qualcomm Life</h2>
-                        <h3 style="text-transform:uppercase">Interim Technology Intern</h3>
-                        <p>May - August 2014, San Diego, CA</p>
-                    </header>
-                    Overhauled an internal web-app that is used to manage a consumer-facing website
-                    <br /> Resolved and implemented requested user stories to increase operational productivity
-                    <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members
-                    using Team Foundation Server in Visual Studio
-
-                    <header>
-                        <h2>The Ohio State University</h2>
-                        <h3 style="text-transform:uppercase">CSE Help Desk Operator</h3>
-                        <p>February 2014 - May 2016, Columbus, OH</p>
-                    </header>
-                    Reply to any queries sent to help@cse.ohio-state.edu diligently and in a timely manner
-                    <br /> Help students, faculty and professors with their queries and account issues
-                    <br /> Print posters for graduate students
-                    <br /> Ensure that all the CSE printers (~20) are working perfectly with no paper and ink issues
-
-                    <header>
-                        <h2>ICICI Prudential AMC Ltd.</h2>
-                        <h3 style="text-transform:uppercase">IT Intern</h3>
-                        <p>Summer 2010, Mumbai, India</p>
-                    </header>
-                    Gained experience programming in work environment
-                    <br /> Primarily programmed in ASP.NET and C#
-                    <br /> Created websites for inputting and recalling user details
-                    <br /> Worked in Microsoft Access to create databases to store user details
-                </article>
+                <header>
+                    <h2>About me</h2>
+                </header>
+                <p>I have loved collecting and analyzing all types of data (including fitness, nutrition, car mileage, and more) since I started using a Fitbit a few years ago. To pursue this interest further, I am studying Computer Science in the <b>Master of Engineering program at University of California, Berkeley</b>. My specialization is in <b>Data Science</b> and I will graduate in Fall 2019.</p>
+                <p>The program focuses extensively on technical leadership in the industry and so, in addition to technical and business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled <i>Applying Deep Multi-Agent Reinforcement Learning on Autonomous Traffic</i>. Our ultimate goal is optimize the behavior of autonomous vehicles to improve a city-scale scenario.</p>
+                <p>In 2017, I published an iOS app called Drinks Tracker on the <b>App Store</b> based on an observation that I made a couple of years ago during my undergraduate at The Ohio State University. In early 2018, I was working on integrating Machine Learning in my app (to automatically suggest drinks to users based on their preferences and past history) when Apple removed this category of apps from the App Store.</p>
+            </article>
 
             <!-- Projects -->
             <article id="projects" class="panel">
@@ -322,7 +274,7 @@
             <article id="contact" class="panel">
                 <a href="mailto:umang@berkeley.edu">
                     <header>
-                        <h2>Contact Me</h2>
+                        <h2>Contact me</h2>
                     </header>
                     <p>I am interested in Machine Learning internships for Summer 2019 before I graduate from University of California, Berkeley in December 2019.</p>
                 </a>
